# maintenance

./: .gitignore  Cargo.toml  README.md  install.sh  journalctl_allow.json  maintenance.service
src/: main.rs  notifications.rs
src/interfaces/: dbus.rs  mod.rs  notifications.rs
