[package]
name = "maintenance"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
dbus = { version = "0.9", features = ["futures"] }
dbus-tokio = "0.7"
futures = "0.3"
log = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
systemd-journal-logger = "2"
tokio = { version = "1", features = ["full"] }
